# pangkalan-data-taman-kehati-backend

./: .gitignore  API_DOCUMENTATION.md  Dockerfile  Makefile  Pipfile  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_ENV.md  check_env.py  docker-compose.render.yml  docker-compose.yml  generate_openapi.py  openapi.json  render.yaml  requirements-dev.txt  requirements.txt  setup.py  start_server.py  test_deployment.sh  test_password_fix.py
app/: database.py  deps.py  init_db.py  init_user.py  main.py
app/api/routers/: audit.py  auth.py  data_export.py  media.py  provinsi.py  taman_kehati.py  users.py  zona_taman.py
app/auth/: utils.py
app/core/: security.py
app/crud/: koleksi_tumbuhan.py
app/geo/: utils.py
app/schemas/: koleksi_tumbuhan.py  search.py  taman_kehati.py  views.py
app/utils/: data_standards.py  etag.py  geo_masking.py  logging_config.py
backend/: Dockerfile  database.md  prompt.md  pyproject.toml
backend/app/: database.py  main.py  settings.py
backend/app/api/routers/: artikel.py  koleksi_tumbuhan.py  meta.py  search.py  views.py
backend/app/audit/: utils.py
backend/app/crud/: artikel.py  taman_kehati.py  users.py
backend/app/geo/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: artikel.py  media.py  meta.py  users.py  zona_taman.py
backend/tests/unit/: test_artikel_crud.py
tests/api/: test_artikel.py  test_artikel_detailed.py
